--- a/src/styles/components.module.css
+++ b/src/styles/components.module.css
@@ -87,9 +87,7 @@
 }
 
 .dockDemo {
-  justify-content: flex-start;
-
-  @media (min-width: 500px) {
-    justify-content: center;
+  @media (max-width: 500px) {
+    --justify-content: flex-start;
   }
 }
